Add entry for pu004 to vagrant-hosts and master playbook

--- a/vagrant-hosts.yml
+++ b/vagrant-hosts.yml
@@ -25,21 +25,6 @@
 #
 # [1] http://docs.vagrantup.com/v2/synced-folders/basic_usage.html
 ---
-- name: srv001
-  ip: 192.168.56.10
-
-- name: srv002
-  box: fedora22-nocm
-  box_url: https://tinfbo2.hogent.be/pub/vm/fedora22-nocm-1.0.15.box
-  synced_folders:
-    - src: test
-      dest: /tmp/test
-    - src: www
-      dest: /var/www/html
-      options:
-        :create: true
-        :owner: root
-        :group: root
-        :mount_options: ['dmode=0755', 'fmode=0644']
-
+- name: pu004
+  ip: 192.0.2.50
 
